tests/baselines/reference/contextualTyping30.errors.txt
tests/cases/compiler/contextualTyping30.ts(1,37): error TS2345: Argument of type '(文字 | 数字)[]' is not assignable to parameter of type '数字[]'.
  Type '文字 | 数字' is not assignable to type '数字'.
    Type '文字' is not assignable to type '数字'.


==== tests/cases/compiler/contextualTyping30.ts (1 errors) ====
    function foo(param:number[]){}; foo([1, "a"]);
                                        ~~~~~~~~
!!! error TS2345: Argument of type '(文字 | 数字)[]' is not assignable to parameter of type '数字[]'.
!!! error TS2345:   Type '文字 | 数字' is not assignable to type '数字'.
!!! error TS2345:     Type '文字' is not assignable to type '数字'.